fix: Menu z-index (#490)

--- a/apps/frontend/src/app/components/header/header.component.css
+++ b/apps/frontend/src/app/components/header/header.component.css
@@ -2,7 +2,7 @@
   height: 64px;
   background: #fff;
   box-shadow: 0 3px 5px 0 rgba(0, 1, 1, 0.1);
-  z-index: 10;
+  z-index: 11;
 }
 
 .container {
